--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,6 +1,5 @@
 .hero {
-  background: url('img/Epcot.svg');
-  height: 500px;
+  background: url('../../images/Epcot.svg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
