--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -6,7 +6,6 @@
   height: 91px;
   position: fixed;
   width: 100%;
-  display: block;
   top: 0;
   transition: top 0.3s;
 
@@ -30,5 +29,9 @@
       color: black;
     }
     background: white;
+  }
+
+  &__logo {
+    height: 60px;
   }
 }
