--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -1,2 +1,17 @@
 .tools-of-the-trade {
+  background: url('../../images/blueBackground.svg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  width: 100vw;
+  height: 800px;
+  &__info-cards-wrapper {
+    display: flex;
+  }
+
+  h2 {
+    margin: 0px;
+  }
 }
