--- a/src/components/WhatWeDo/WhatWeDo.scss
+++ b/src/components/WhatWeDo/WhatWeDo.scss
@@ -4,6 +4,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  text-align: center;
 
   width: fit-content;
   height: fit-content;
@@ -14,5 +15,37 @@
 
   h2 {
     margin: 0px;
+  }
+
+  &__content-wrapper {
+    display: flex;
+    color: white;
+    text-align: left;
+    margin-bottom: 50px;
+
+    p {
+      width: 280px;
+      margin-left: 53px;
+    }
+    h2 {
+      margin-left: 53px;
+    }
+  }
+  &__all-content-wrapper {
+    display: flex;
+    img {
+      width: 100px;
+    }
+  }
+
+  &__text {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    color: white;
+    font-size: 22px;
+    line-height: 32px;
+    margin-left: 24px;
   }
 }
