--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -1,4 +1,9 @@
 .contact-us {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 75px 75px 0px 75px;
+
   background: url('../../images/grayBackground.svg');
   background-attachment: fixed;
   background-position: center;
@@ -6,8 +11,7 @@
   background-size: cover;
 
   text-align: center;
-  height: fit-content;
-  padding: 75px;
+  height: 600px;
 
   &__info-cards-wrapper {
     display: flex;
@@ -17,6 +21,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    color: white;
     p {
       width: 434px;
     }
@@ -39,6 +44,25 @@
 
   &__form {
     display: flex;
+    justify-content: space-evenly;
     flex-direction: column;
+    padding: 0 80px 0 40px;
+    height: 100%;
+  }
+
+  &__form-item-wrapper {
+    display: flex;
+    input {
+      width: 50%;
+    }
+  }
+
+  &__button {
+    width: 260px;
+    background: #f7f7f7;
+    border-radius: 27px;
+    color: #2a83e8;
+    font-size: 17px;
+    padding: 8px;
   }
 }
