--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -22,6 +22,8 @@
     justify-content: center;
     text-align: center;
     color: white;
+    height: fit-content;
+
     p {
       width: 434px;
     }
@@ -30,31 +32,51 @@
   &__main-form-contact-us {
     display: flex;
     flex-direction: column;
-    height: 250px;
-    width: 372px;
+    width: fit-content;
     background-color: #364655;
+    text-align: left;
+    padding: 0 50px;
+
+    a {
+      color: white;
+      text-decoration-line: none;
+    }
   }
 
   &__form-wrapper {
-    height: 250px;
-    width: 1011px;
+    height: fit-content;
+    width: 60vw;
     background-color: #364655;
     margin-left: 8px;
+    padding: 24px;
+
+    h2 {
+      text-align: left;
+    }
   }
 
   &__form {
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
-    padding: 0 80px 0 40px;
     height: 100%;
+
+    input {
+      border: none;
+      border-bottom: 1px solid white;
+      background: inherit;
+      color: white;
+      width: 100%;
+      // &::placeholder {
+      //   font-size: 16px;
+      //   color: white;
+      //   margin-bottom: 8px;
+      // }
+    }
   }
 
   &__form-item-wrapper {
     display: flex;
-    input {
-      width: 50%;
-    }
   }
 
   &__button {
@@ -64,5 +86,25 @@
     color: #2a83e8;
     font-size: 17px;
     padding: 8px;
+    margin-top: 16px;
+  }
+
+  &__form-item {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    width: 100%;
+    margin-top: 24px;
+  }
+
+  footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__logo {
+    width: 250px;
+    margin-right: 16px;
   }
 }
