--- a/src/components/InfoCard/InfoCard.scss
+++ b/src/components/InfoCard/InfoCard.scss
@@ -4,4 +4,13 @@
   background: #364655 0% 0% no-repeat padding-box;
   box-shadow: 0px 5px 8px #00000029;
   border: 1px solid #707070;
+  background-image: url('../../images/processCircle.svg');
+  background-size: 13vw;
+  background-position: center;
+  color: white;
+
+  // &__process-circle {
+  //   width: 50%;
+  //   z-index: 100;
+  // }
 }
