--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -7,40 +7,47 @@
 
   // Take out when image is removed
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   // Take out when image is removed
 
   height: fit-content;
   padding: 75px;
-  &__info-cards-wrapper {
-    display: flex;
-  }
-  h2 {
+  &__header {
     margin: 0px;
+    margin-bottom: 64px;
+    font-size: 48px;
   }
 
-  &__content-item-wrapper {
-    width: 300px;
-    position: relative;
-  }
+  // &__info-cards-wrapper {
+  //   display: flex;
+  // }
+  // h2 {
+  //   margin: 0px;
+  // }
 
-  &__content-item-process-circle {
-    width: 135px;
-  }
-  s &__content-items-wrapper {
-    display: grid;
-    grid-template-columns: 20% 20% 20%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
-    column-gap: 5%;
-  }
+  // &__content-item-wrapper {
+  //   width: 300px;
+  //   position: relative;
+  // }
 
-  &__content-item-process-text-wrapper {
-    width: fit-content;
-    position: absolute;
-    top: 59px;
-    left: 23px;
-  }
+  // &__content-item-process-circle {
+  //   width: 135px;
+  // }
+  // s &__content-items-wrapper {
+  //   display: grid;
+  //   grid-template-columns: 20% 20% 20%;
+  //   grid-template-rows: 20% 20% 20% 20% 20%;
+  //   column-gap: 5%;
+  // }
+
+  // &__content-item-process-text-wrapper {
+  //   width: fit-content;
+  //   position: absolute;
+  //   top: 59px;
+  //   left: 23px;
+  // }
 
   img {
     width: 80vw;
