--- a/src/components/InfoCard/InfoCard.scss
+++ b/src/components/InfoCard/InfoCard.scss
@@ -1,16 +1,27 @@
 .info-card {
   left: 261px;
   height: 298px;
-  background: #364655 0% 0% no-repeat padding-box;
-  box-shadow: 0px 5px 8px #00000029;
-  border: 1px solid #707070;
-  background-image: url('../../images/processCircle.svg');
+  background: #ffffff 0% 0% no-repeat padding-box;
+  box-shadow: 10px 6px 0px 5px #2a83e9;
+  border: 1px solid #eeeeee;
   background-size: 13vw;
   background-position: center;
-  color: white;
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 31px;
+  text-align: initial;
 
-  // &__process-circle {
-  //   width: 50%;
-  //   z-index: 100;
-  // }
+  &__header-text {
+    font-family: Domus;
+    font-size: 27px;
+    font-weight: bold;
+  }
+  &__main-section {
+    height: 80%;
+    font-family: 'Domus';
+    font-size: 18px;
+    line-height: 2;
+  }
 }
