--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -10,11 +10,16 @@
   transition: top 0.3s;
 
   &__button {
-    background: #f7f7f7;
     border-radius: 27px;
-    color: #2a83e8;
+    color: #f7f7f7;
     font-size: 17px;
     padding: 8px;
+    background-color: #2a83e9;
+    width: 150px;
+  }
+  &__button:hover {
+    background-color: #f7f7f7;
+    color: #2a83e9;
   }
   a {
     float: left;
