--- a/src/components/WhoWeAre/WhoWeAre.scss
+++ b/src/components/WhoWeAre/WhoWeAre.scss
@@ -1,4 +1,6 @@
 .who-we-are {
+  display: flex;
+  align-items: center;
   background: url('../../images/grayBackground.svg');
   background-attachment: fixed;
   background-position: center;
@@ -7,6 +9,12 @@
 
   height: fit-content;
   padding: 75px;
+  padding-right: 0px;
+
+  &__reversed {
+    padding-left: 0px;
+    flex-wrap: wrap-reverse;
+  }
   &__info-cards-wrapper {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -20,14 +28,21 @@
   }
 
   &__toggled {
-    width: 50%;
+    width: 100px;
     font-size: 62px;
-    border-radius: 43px;
     border: none;
     background: white;
+    height: 75%;
+    padding: 522.4px 26.3px 522.4px;
+    border: solid 1px #707070;
+    background-color: #f4f4f4;
+  }
+  &__toggled:hover {
+    background-color: white;
   }
 
   &__not-toggled {
+    display: none;
     background: inherit;
   }
 
@@ -37,6 +52,7 @@
   }
 
   &__main {
+    text-align: center;
   }
 
   &__values-wrapper {
@@ -44,16 +60,38 @@
     margin-top: 46px;
   }
 
-  &__image-icon-wrapper {
+  &__all-image-icon-wrapper {
     display: flex;
     justify-content: space-between;
+    padding: 50px;
+  }
+  &__image-icon-wrapper {
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    font-family: Domus;
+    font-size: 24px;
   }
   &__image-icon {
-    width: 156px;
+    width: 100%;
+  }
+  &__mobile-image-icon {
+    width: 30%;
+  }
+  &__laptop-mobile-image-icon-wrapper {
+    display: flex;
+  }
+  &__laptop-image-icon {
+    width: 90%;
+    height: 100%;
   }
 
   &__text {
     text-align: center;
     line-height: 2;
+    font-family: Domus;
+    font-size: 32px;
   }
 }
