--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -7,31 +7,69 @@
   text-align: center;
   color: white;
 
-  width: fit-content;
   height: fit-content;
-  padding: 75px;
+  padding: 32px;
   &__info-cards-wrapper {
     display: flex;
   }
 
-  &__text-wrapper {
+  &__text-header-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
+  &__text-image-wrapper {
+    display: flex;
+  }
+  &__text-image-main-wrapper {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    p {
+      font-size: 24px;
+    }
+  }
+
+  &__languages {
+    text-align: left !important;
+    margin-left: 50px;
+    p {
+      text-align: left !important;
+    }
+  }
+  &__tools-frameworks {
+    text-align: left !important;
+    margin-right: 50px;
+    p {
+      text-align: left !important;
+    }
+  }
+  &__platforms {
+    text-align: left !important;
+    margin-left: 50px;
+    p {
+      text-align: left !important;
+    }
+  }
+
   h2 {
     margin: 0px;
+    // font-family: DomusTitling;
+    font-size: 56px;
   }
 
   p {
-    width: 50vw;
+    // width: 50vw;
     text-align: center;
   }
 
   &__icon-wrapper {
     text-align: center;
   }
+
   &__all-icon-wrapper {
     display: grid;
     grid-template-columns: auto auto auto;
