--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -32,7 +32,7 @@
     flex-direction: column;
 
     p {
-      font-size: 24px;
+      font-size: 18px;
     }
   }
 
@@ -63,12 +63,15 @@
   h2 {
     margin: 0px;
     // font-family: DomusTitling;
-    font-size: 56px;
+    font-size: 40px;
+  }
+  h3 {
+    font-size: 26px;
   }
 
   p {
-    // width: 50vw;
     text-align: center;
+    font-size: 18px;
   }
 
   &__icon-wrapper {
