--- a/src/components/WhoWeAre/WhoWeAre.scss
+++ b/src/components/WhoWeAre/WhoWeAre.scss
@@ -25,8 +25,8 @@
   &__info-cards-wrapper {
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 0 80px;
-    column-gap: 129px;
+    width: 60vw;
+    column-gap: 55px;
     row-gap: 44px;
   }
 
@@ -60,26 +60,38 @@
 
   &__main {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h1 {
+      font-size: 40px;
+    }
   }
 
   &__values-wrapper {
     text-align: center;
     margin-top: 46px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h1 {
+      font-size: 40px;
+    }
   }
 
   &__all-image-icon-wrapper {
     display: flex;
     justify-content: space-between;
     padding: 50px;
+    width: 60vw;
   }
   &__image-icon-wrapper {
     width: 15%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     text-align: center;
     font-family: Domus;
-    font-size: 24px;
+    font-size: 18px;
   }
   &__image-icon {
     width: 100%;
@@ -99,7 +111,7 @@
     text-align: center;
     line-height: 2;
     font-family: Domus;
-    font-size: 32px;
+    font-size: 18px;
   }
 
   // Our Story
