--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -1,19 +1,17 @@
 .our-process {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   background: url('../../images/grayBackground.svg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
-  // Take out when image is removed
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  // Take out when image is removed
-
   height: fit-content;
   padding: 75px;
+
   &__header {
     margin: 0px;
     margin-bottom: 64px;
@@ -23,41 +21,59 @@
   &__info-cards-wrapper {
     display: flex;
   }
+
   h2 {
     margin: 0px;
   }
-  // ================
+
+  > p {
+    width: 40vw;
+  }
 
   &__all-content-item-wrapper {
-    width: 60vw;
+    width: 50vw;
     display: flex;
     justify-content: space-between;
   }
+
   &__all-content-item {
-    width: 20vw;
+    width: 25vw;
     height: fit-content;
   }
-  // ================
 
   &__content-item-wrapper {
     position: relative;
-    margin-bottom: 5vw;
+    margin-bottom: 4vw;
+    display: flex;
+    flex-direction: column;
+    align-items: inherit;
+  }
+
+  &__content-item-wrapper-left {
+    flex-wrap: wrap-reverse;
   }
 
   &__content-item-process-circle {
-    width: 60%;
+    width: 100%;
     z-index: 0;
-  }
-
-  &__content-items-wrapper {
-    display: grid;
-    grid-template-columns: 20% 20% 20%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
-    column-gap: 5%;
   }
 
   &__process-image-text-wrapper {
     position: relative;
+    width: 40%;
+  }
+
+  &__process-text-right {
+    text-align: left;
+    margin-top: 0px;
+    margin-left: 30%;
+    margin-right: 8%;
+  }
+  &__process-text-left {
+    text-align: right;
+    margin-top: 0px;
+    margin-right: 30%;
+    margin-left: 8%;
   }
 
   &__content-item-process-text-wrapper {
@@ -77,8 +93,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 50px;
-    height: 50px;
+    width: 44px;
+    height: 44px;
+    margin-top: 16px;
+
     border: solid 1px #707070;
     border-radius: 124px;
     background-color: #364655;
@@ -86,10 +104,9 @@
   }
 
   &__content-item-right {
-    // text-align: right;
   }
+
   &__content-item-left {
-    // text-align: left;
     margin-top: 10vw;
   }
 }
