--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -17,6 +17,7 @@
     padding: 8px;
     background-color: #2a83e9;
     width: 150px;
+    border: 0px;
   }
   &__button:hover {
     background-color: #f7f7f7;
