--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -59,7 +59,8 @@
   &__process-image-text-wrapper {
     position: relative;
 
-    width: 40%;
+    width: 55%;
+    // width: 40%;
   }
 
   &__process-text-right {
@@ -90,6 +91,11 @@
     width: 100px;
     margin-left: -50px;
     margin-top: -16px;
+
+    > span {
+      font-size: 24px;
+      font-size: 28px;
+    }
   }
 
   &__content-item-process-number {
