--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -1,25 +1,30 @@
 .our-process {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   background: url('../../images/grayBackground.svg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
-  height: fit-content;
-  padding: 75px;
-
-  h2 {
-    margin: 0px;
+  &__spacer {
+    height: 107px;
   }
 
-  > p {
-    width: 40vw;
-  }
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    height: fit-content;
+    padding: 0 75px 75px 75px;
+
+    h2 {
+      margin: 0px;
+    }
+
+    > p {
+      width: 40vw;
+    }
+  }
   &__header {
     margin: 0px;
     margin-bottom: 64px;
