--- a/src/components/WhatWeDo/WhatWeDo.scss
+++ b/src/components/WhatWeDo/WhatWeDo.scss
@@ -1,29 +1,35 @@
 .what-we-do {
-  display: flex;
-  text-align: center;
-  flex-direction: column;
-  align-items: center;
-  height: fit-content;
-  padding: 75px;
-
   background: url('../../images/blueBackground.svg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
-  h1 {
-    margin: 0px;
-    margin-bottom: 48px;
-
-    color: white;
-    font-size: 40px;
+  &__spacer {
+    height: 107px;
   }
 
-  h2 {
-    margin: 0px;
+  &__wrapper {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
+    padding: 0 75px 75px 75px;
 
-    color: white;
+    h1 {
+      margin: 0px;
+      margin-bottom: 48px;
+
+      color: white;
+      font-size: 40px;
+    }
+
+    h2 {
+      margin: 0px;
+
+      color: white;
+    }
   }
 
   &__content-wrapper {
