--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -1,34 +1,38 @@
 .tools-of-the-trade {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: fit-content;
-  padding: 32px;
-
   background: url('../../images/blueBackground.svg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
-  text-align: center;
-  color: white;
-
-  h2 {
-    margin: 0px;
-
-    font-size: 40px;
+  &__spacer {
+    height: 107px;
   }
 
-  h3 {
-    font-size: 26px;
-  }
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
+    padding: 0 75px 75px 75px;
 
-  p {
     text-align: center;
-    font-size: 18px;
-  }
+    color: white;
+    h2 {
+      margin: 0px;
 
+      font-size: 40px;
+    }
+
+    h3 {
+      font-size: 26px;
+    }
+
+    p {
+      text-align: center;
+      font-size: 18px;
+    }
+  }
   &__text-header-wrapper {
     display: flex;
     flex-direction: column;
