--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -39,3 +39,23 @@
     font-size: 48px;
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .hero {
+    height: 286px;
+    background-size: 868px;
+
+    &__text-top {
+      font-size: 14px;
+    }
+
+    &__text-bottom {
+      width: 200px;
+      font-size: 12px;
+    }
+
+    &__heading {
+      font-size: 24px;
+    }
+  }
+}
