--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -39,3 +39,17 @@
     height: 60px;
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .navbar {
+    justify-content: start;
+    height: 30px;
+
+    align-items: left;
+
+    &__logo {
+      height: 24px;
+      margin-left: 8px;
+    }
+  }
+}
