--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -54,6 +54,10 @@
     width: 20vw;
   }
 
+  &__platforms-text-image {
+    width: 15vw;
+  }
+
   &__text-image-main-wrapper {
     display: flex;
     justify-content: center;
@@ -123,6 +127,15 @@
 
     &__text-image {
       width: 45%;
+      height: fit-content;
+    }
+
+    &__platforms-text-image {
+      width: 35%;
+    }
+
+    &__text-image-wrapper {
+      align-items: center;
     }
 
     &__languages {
@@ -130,6 +143,7 @@
       h3 {
         font-size: 28px;
         font-weight: bold;
+        margin-bottom: 0px;
       }
     }
 
@@ -139,6 +153,7 @@
       h3 {
         font-size: 28px;
         font-weight: bold;
+        margin-bottom: 0px;
       }
     }
 
@@ -148,6 +163,7 @@
       h3 {
         font-size: 28px;
         font-weight: bold;
+        margin-bottom: 0px;
       }
     }
 
