--- a/src/components/OurBusiness/OurBusiness.scss
+++ b/src/components/OurBusiness/OurBusiness.scss
@@ -73,7 +73,8 @@
   }
 
   &__mobile-image-icon {
-    width: 30%;
+    width: 50%;
+    margin-left: -14px;
   }
 
   &__laptop-mobile-image-icon-wrapper {
@@ -81,7 +82,6 @@
   }
 
   &__laptop-image-icon {
-    width: 90%;
     height: 100%;
   }
 
