--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -136,6 +136,10 @@
       }
     }
 
+    &__spacer {
+      height: 30px;
+    }
+
     &__all-content-item-wrapper {
       flex-direction: column;
       width: 100%;
