--- a/src/components/WhatWeDo/WhatWeDo.scss
+++ b/src/components/WhatWeDo/WhatWeDo.scss
@@ -86,6 +86,10 @@
       font-weight: 600;
     }
 
+    &__spacer {
+      height: 30px;
+    }
+
     &__wrapper {
       padding: 0px 15px 48px 15px;
     }
