--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -114,6 +114,13 @@
     width: 250px;
     margin-right: 16px;
   }
+
+  &__form-error-message {
+    color: red;
+  }
+  &__form-good-message {
+    color: green;
+  }
 }
 
 .nameInput {
