--- a/src/components/MobileNav/MobileNav.scss
+++ b/src/components/MobileNav/MobileNav.scss
@@ -1,8 +1,8 @@
 .mobile-navbar {
   &__button-wrapper {
     position: fixed;
-    bottom: 0px;
-    right: 0px;
+    bottom: 1vw;
+    right: 1vw;
 
     display: flex;
     justify-content: center;
@@ -12,17 +12,6 @@
 
     background-color: black;
     z-index: 2;
-  }
-
-  &__button {
-    width: 25px;
-    height: 25px;
-  }
-
-  &__button-closed {
-  }
-
-  &__button-open {
   }
 
   &__closed {
@@ -37,7 +26,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 90vw;
+    width: 89vw;
     height: 352px;
 
     text-align: left;
@@ -65,4 +54,37 @@
       color: white;
     }
   }
+
+  &__hamburger &__line {
+    width: 30px;
+    height: 5px;
+    background-color: #ecf0f1;
+    display: block;
+    margin: 8px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+
+  &__hamburger:hover {
+    cursor: pointer;
+  }
+}
+
+#hamburger.mobile-navbar__is-active .mobile-navbar__line:nth-child(2) {
+  opacity: 0;
+}
+
+#hamburger.mobile-navbar__is-active .mobile-navbar__line:nth-child(1) {
+  -webkit-transform: translateY(13px) rotate(45deg);
+  -ms-transform: translateY(13px) rotate(45deg);
+  -o-transform: translateY(13px) rotate(45deg);
+  transform: translateY(13px) rotate(45deg);
+}
+
+#hamburger.mobile-navbar__is-active .mobile-navbar__line:nth-child(3) {
+  -webkit-transform: translateY(-13px) rotate(-45deg);
+  -ms-transform: translateY(-13px) rotate(-45deg);
+  -o-transform: translateY(-13px) rotate(-45deg);
+  transform: translateY(-13px) rotate(-45deg);
 }
