--- a/src/components/OurBusiness/OurBusiness.scss
+++ b/src/components/OurBusiness/OurBusiness.scss
@@ -6,7 +6,7 @@
   padding: 75px;
   padding-right: 0px;
 
-  background: url('../../images/grayBackground.svg');
+  background: url('https://kad-website.s3.us-west-1.amazonaws.com/whiteBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
