--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -1,5 +1,5 @@
 .our-process {
-  background: url('../../images/grayBackground.svg');
+  background: url('https://kad-website.s3.us-west-1.amazonaws.com/whiteBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
