--- a/src/components/OurStory/OurStory.scss
+++ b/src/components/OurStory/OurStory.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   padding: 75px;
 
-  background: url('../../images/grayBackground.svg');
+  background: url('https://kad-website.s3.us-west-1.amazonaws.com/whiteBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
