--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -1,5 +1,5 @@
 .tools-of-the-trade {
-  background: url('../../images/blueBackground.svg');
+  background: url('https://kad-website.s3.us-west-1.amazonaws.com/blueBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
