--- a/src/components/WhatWeDo/WhatWeDo.scss
+++ b/src/components/WhatWeDo/WhatWeDo.scss
@@ -1,5 +1,5 @@
 .what-we-do {
-  background: url('../../images/blueBackground.svg');
+  background: url('https://kad-website.s3.us-west-1.amazonaws.com/blueBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
