--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
   scroll-behavior: smooth;
 
   &__not-ready {
-    background: url('./images/grayBackground.svg');
+    background: url('https://kad-website.s3.us-west-1.amazonaws.com/whiteBackground.png');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
