--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -20,23 +20,56 @@
     color: #f2f2f2;
     text-align: center;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
+    opacity: 0.8;
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
   }
 
   a:hover {
-    background-color: #ddd;
-    color: black;
+    opacity: 1;
   }
 
   &__scroll {
     a {
+      opacity: 0.8;
+      color: black;
+    }
+
+    :hover {
+      opacity: 1;
       color: black;
     }
     background: white;
   }
 
   &__logo {
-    height: 60px;
+    height: 50px;
+  }
+
+  &__link-wrapper {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+
+  &__indicator {
+    position: absolute;
+    bottom: 0;
+    height: 2px;
+    width: 50px;
+    background-color: #2a83e9;
+    will-change: left, right;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+
+  &__link--active {
+    background: rgba(42, 131, 233, 0.5);
+    border-radius: 5px;
   }
 }
 
