--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,15 +1,19 @@
 .button {
   padding: 8px;
-
   border-radius: 27px;
   color: #f7f7f7;
   font-size: 17px;
   background-color: #2a83e9;
   border: 0px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 
   &:hover {
     background-color: #f7f7f7;
     color: #2a83e9;
+    box-shadow: 0 3px 3px 0 rgb(0 0 0 / 14%), 0 1px 7px 0 rgb(0 0 0 / 12%),
+      0 3px 1px -1px rgb(0 0 0 / 20%);
   }
 
   &__sec {
@@ -19,7 +23,7 @@
 
   &__sec:hover {
     background-color: #364655;
-    color: white;
+    color: white !important;
   }
 
   &__small {
