--- a/src/components/OurBusiness/OurBusiness.scss
+++ b/src/components/OurBusiness/OurBusiness.scss
@@ -128,8 +128,7 @@
     }
 
     &__info-text-wrapper {
-      margin-left: 10vw;
-      margin-right: 5vw;
+      width: 80%;
     }
 
     &__info-text {
