--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,19 +1,31 @@
 .button {
+  position: relative;
   padding: 8px;
   border-radius: 27px;
   color: #f7f7f7;
   font-size: 17px;
   background-color: #2a83e9;
   border: 0px;
-  -webkit-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out; /* Safari */
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  overflow: hidden;
+  background-position: center;
+  transition: background 0.8s;
 
   &:hover {
     background-color: #f7f7f7;
     color: #2a83e9;
     box-shadow: 0 3px 3px 0 rgb(0 0 0 / 14%), 0 1px 7px 0 rgb(0 0 0 / 12%),
       0 3px 1px -1px rgb(0 0 0 / 20%);
+    background: #f7f7f7 radial-gradient(circle, transparent 1%, #f7f7f7 1%)
+      center/15000%;
+  }
+
+  &:active {
+    background-color: #6eb9f7;
+    background-size: 100%;
+    transition: background 0s;
   }
 
   &__sec {
@@ -24,6 +36,14 @@
   &__sec:hover {
     background-color: #364655;
     color: white !important;
+    background: #364655 radial-gradient(circle, transparent 1%, #364655 1%)
+      center/15000%;
+  }
+
+  &__sec:active {
+    background-color: white;
+    background-size: 100%;
+    transition: background 0s;
   }
 
   &__small {
@@ -36,4 +56,10 @@
   &__large {
     width: 260px;
   }
+
+  // &:after {
+  //   background-color: #6eb9f7;
+  //   background-size: 100%;
+  //   transition: background 0s;
+  // }
 }
