--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -188,3 +188,70 @@
     }
   }
 }
+
+@media screen and (min-width: 1300px) and (max-width: 1500px) {
+  .our-process {
+    &__content-item-process-text-wrapper > span {
+      font-size: 24px;
+    }
+
+    &__content-item-process-number {
+      width: 40px;
+      height: 40px;
+      margin-top: 16px;
+    }
+  }
+}
+@media screen and (min-width: 1000px) and (max-width: 1300px) {
+  .our-process {
+    &__content-item-process-text-wrapper > span {
+      font-size: 20px;
+    }
+
+    &__content-item-process-number {
+      width: 40px;
+      height: 40px;
+      margin-top: 8px;
+    }
+  }
+}
+@media screen and (min-width: 750px) and (max-width: 1000px) {
+  .our-process {
+    &__content-item-process-circle {
+      width: 60%;
+    }
+  }
+}
+
+@media screen and (min-width: 550px) and (max-width: 750px) {
+  .our-process {
+    &__content-item-process-circle {
+      width: 75%;
+    }
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .our-process {
+    &__content-item-process-text-wrapper > span {
+      font-size: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .our-process {
+    &__content-item-process-circle {
+      width: 95%;
+    }
+    &__content-item-process-text-wrapper > span {
+      font-size: 15px;
+    }
+
+    &__content-item-process-number {
+      width: 28px;
+      height: 28px;
+      margin-top: 8px;
+    }
+  }
+}
