update background images

--- a/src/components/OurBusiness/OurBusiness.scss
+++ b/src/components/OurBusiness/OurBusiness.scss
@@ -139,3 +139,9 @@
     }
   }
 }
+
+@media screen and (max-width: 390px) {
+  .our-business {
+    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallWhiteBackground.png');
+  }
+}
