--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -176,3 +176,9 @@
     }
   }
 }
+
+@media screen and (max-width: 390px) {
+  .tools-of-the-trade {
+    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallBlueBackground.png');
+  }
+}
