--- a/src/components/WhatWeDo/WhatWeDo.scss
+++ b/src/components/WhatWeDo/WhatWeDo.scss
@@ -138,3 +138,9 @@
     }
   }
 }
+
+@media screen and (max-width: 390px) {
+  .what-we-do {
+    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallBlueBackground.png');
+  }
+}
