--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -185,3 +185,9 @@
     }
   }
 }
+
+@media screen and (max-width: 390px) {
+  .contact-us {
+    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallWhiteBackground.png');
+  }
+}
