--- a/src/components/OurStory/OurStory.scss
+++ b/src/components/OurStory/OurStory.scss
@@ -53,3 +53,9 @@
     }
   }
 }
+
+@media screen and (max-width: 390px) {
+  .our-story {
+    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallWhiteBackground.png');
+  }
+}
