update moble styles

--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -124,6 +124,7 @@
   .contact-us {
     height: fit-content;
     padding: 21px 15px 0px 15px;
+    background-attachment: unset;
 
     &__form-wrapper {
       width: 100%;
