--- a/src/components/WhatWeDo/WhatWeDo.scss
+++ b/src/components/WhatWeDo/WhatWeDo.scss
@@ -79,6 +79,7 @@
 
 @media screen and (max-width: 1000px) {
   .what-we-do {
+    background-attachment: unset;
     h1 {
       margin-bottom: 8px;
 
