--- a/src/App.scss
+++ b/src/App.scss
@@ -8,13 +8,16 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    font-family: Domus;
     font-size: 32px;
     padding: 50px;
     line-height: 1.5;
     display: flex;
     flex-direction: column;
     text-align: center;
+  }
+
+  p {
+    font-family: 'Roboto', sans-serif;
   }
 }
 
