--- a/src/components/OurBusiness/OurBusiness.scss
+++ b/src/components/OurBusiness/OurBusiness.scss
@@ -64,7 +64,6 @@
     width: 15%;
 
     text-align: center;
-    font-family: Domus;
     font-size: 18px;
   }
 
@@ -77,7 +76,6 @@
 
     text-align: center;
     line-height: 2;
-    font-family: Domus;
     font-size: 18px;
   }
 }
@@ -85,6 +83,7 @@
 @media screen and (max-width: 1000px) {
   .our-business {
     padding: 0px;
+    background-attachment: unset;
 
     &__main {
       h1 {
