--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -124,7 +124,7 @@
 
 @media screen and (max-width: 1000px) {
   .our-process {
-    // background-attachment: scroll;
+    background-attachment: unset;
     &__wrapper {
       padding: 0px 15px 48px 15px;
 
