--- a/src/components/OurStory/OurStory.scss
+++ b/src/components/OurStory/OurStory.scss
@@ -13,12 +13,10 @@
     width: 85%;
 
     h1 {
-      font-family: DomusTitling;
       font-size: 40px;
       text-align: center;
     }
     p {
-      font-family: Domus;
       font-size: 18px;
       line-height: 1.5;
       letter-spacing: 0.36px;
@@ -39,6 +37,7 @@
 @media screen and (max-width: 1000px) {
   .our-story {
     padding: 0px 15px 48px 15px;
+    background-attachment: unset;
 
     &__wrapper {
       width: 100%;
