--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -109,6 +109,7 @@
 
 @media screen and (max-width: 1000px) {
   .tools-of-the-trade {
+    background-attachment: unset;
     &__wrapper {
       padding: 0px 15px 48px 15px;
 
