--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -33,7 +33,8 @@
   }
 
   &__all-content-item-wrapper {
-    width: 50vw;
+    flex-direction: column;
+    width: 60vw;
     display: flex;
     justify-content: space-between;
   }
@@ -47,39 +48,42 @@
     position: relative;
 
     display: flex;
-    flex-direction: column;
     align-items: inherit;
-    margin-bottom: 4vw;
   }
 
   &__content-item-wrapper-left {
-    flex-wrap: wrap-reverse;
+    flex-direction: row-reverse;
   }
 
   &__content-item-process-circle {
-    width: 100%;
+    width: 100px;
     z-index: 0;
   }
 
   &__process-image-text-wrapper {
     position: relative;
-
-    width: 55%;
-    // width: 40%;
   }
 
   &__process-text-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 40%;
     margin-top: 0px;
-    margin-left: 30%;
-    margin-right: 8%;
+    margin-left: 24px;
+    margin-right: 0%;
 
     text-align: left;
   }
 
   &__process-text-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 40%;
     margin-top: 0px;
-    margin-right: 30%;
-    margin-left: 8%;
+    margin-right: 24px;
+    margin-left: 0%;
 
     text-align: right;
   }
@@ -87,7 +91,7 @@
   &__content-item-process-text-wrapper {
     position: absolute;
     left: 50%;
-    top: 38%;
+    top: 45%;
 
     display: flex;
     flex-direction: column;
@@ -98,8 +102,7 @@
     margin-top: -16px;
 
     > span {
-      font-size: 24px;
-      font-size: 28px;
+      font-size: 14px;
     }
   }
 
@@ -107,9 +110,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 44px;
-    height: 44px;
-    margin-top: 16px;
+    width: 30px;
+    height: 30px;
+    margin-top: 8px;
 
     border: solid 1px #707070;
     border-radius: 124px;
@@ -142,76 +145,58 @@
     }
 
     &__all-content-item-wrapper {
-      flex-direction: column;
-      width: 100%;
-
       font-size: 16px;
+      width: 100%;
     }
 
     &__all-content-item {
       width: 100%;
     }
 
-    &__content-item-wrapper {
-      flex-direction: row;
-    }
-
-    &__content-item-wrapper-left {
-      flex-direction: row-reverse;
-    }
-
     &__process-image-text-wrapper {
+      position: relative;
       width: 50%;
-    }
-
-    &__process-text-left {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 40%;
-      margin-top: 0px;
-      margin-right: 24px;
-      margin-left: 0%;
-
-      text-align: right;
+      height: fit-content;
     }
 
     &__process-text-right {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 40%;
-      margin-top: 0px;
-      margin-left: 24px;
+      margin-left: 0px;
       margin-right: 0%;
+    }
 
-      text-align: left;
+    &__process-text-left {
+      margin-right: 0px;
+    }
+
+    &__content-item-process-circle {
+      // width: 70%;
+      z-index: 0;
+    }
+
+    &__content-item-wrapper {
+      position: relative;
+
+      display: flex;
+      align-items: inherit;
+      margin-bottom: 4vw;
     }
   }
 }
 
 @media screen and (min-width: 1300px) and (max-width: 1500px) {
   .our-process {
-    &__content-item-process-text-wrapper > span {
-      font-size: 24px;
-    }
-
     &__content-item-process-number {
-      width: 40px;
-      height: 40px;
-      margin-top: 16px;
+      width: 30px;
+      height: 30px;
+      margin-top: 8px;
     }
   }
 }
 @media screen and (min-width: 1000px) and (max-width: 1300px) {
   .our-process {
-    &__content-item-process-text-wrapper > span {
-      font-size: 20px;
-    }
-
     &__content-item-process-number {
-      width: 40px;
-      height: 40px;
+      width: 30px;
+      height: 30px;
       margin-top: 8px;
     }
   }
@@ -219,7 +204,7 @@
 @media screen and (min-width: 750px) and (max-width: 1000px) {
   .our-process {
     &__content-item-process-circle {
-      width: 60%;
+      // width: 60%;
     }
   }
 }
@@ -227,7 +212,7 @@
 @media screen and (min-width: 550px) and (max-width: 750px) {
   .our-process {
     &__content-item-process-circle {
-      width: 75%;
+      // width: 75%;
     }
   }
 }
@@ -244,8 +229,11 @@
 
 @media screen and (max-width: 340px) {
   .our-process {
+    &__content-item-process-text-wrapper {
+      top: 50%;
+    }
     &__content-item-process-circle {
-      width: 95%;
+      // width: 95%;
     }
     &__content-item-process-text-wrapper > span {
       font-size: 15px;
