--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -91,8 +91,13 @@
     display: flex;
   }
 
-  &__button {
+  &__button-submit {
     margin-top: 16px;
+  }
+
+  &__button-clear {
+    margin-top: 16px;
+    margin-left: 16px;
   }
 
   &__form-item {
