--- a/src/components/OurStory/OurStory.scss
+++ b/src/components/OurStory/OurStory.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   padding: 75px;
 
-  background: url('https://kad-website.s3.us-west-1.amazonaws.com/whiteBackground.png');
+  background: url('https://kad-website-ui-images.s3.amazonaws.com/whiteBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -55,6 +55,6 @@
 
 @media screen and (max-width: 390px) {
   .our-story {
-    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallWhiteBackground.png');
+    background: url('https://kad-website-ui-images.s3.amazonaws.com/smallWhiteBackground.png');
   }
 }
