--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -1,5 +1,5 @@
 .tools-of-the-trade {
-  background: url('https://kad-website.s3.us-west-1.amazonaws.com/blueBackground.png');
+  background: url('https://kad-website-ui-images.s3.amazonaws.com/blueBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -180,6 +180,6 @@
 
 @media screen and (max-width: 390px) {
   .tools-of-the-trade {
-    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallBlueBackground.png');
+    background: url('https://kad-website-ui-images.s3.amazonaws.com/smallBlueBackground.png');
   }
 }
