--- a/src/components/WhatWeDo/WhatWeDo.scss
+++ b/src/components/WhatWeDo/WhatWeDo.scss
@@ -1,5 +1,5 @@
 .what-we-do {
-  background: url('https://kad-website.s3.us-west-1.amazonaws.com/blueBackground.png');
+  background: url('https://kad-website-ui-images.s3.amazonaws.com/blueBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -142,6 +142,6 @@
 
 @media screen and (max-width: 390px) {
   .what-we-do {
-    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallBlueBackground.png');
+    background: url('https://kad-website-ui-images.s3.amazonaws.com/smallBlueBackground.png');
   }
 }
