--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -5,7 +5,7 @@
   height: 600px;
   padding: 75px 75px 0px 75px;
 
-  background: url('https://kad-website.s3.us-west-1.amazonaws.com/whiteBackground.png');
+  background: url('https://kad-website-ui-images.s3.amazonaws.com/whiteBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -205,6 +205,6 @@
 
 @media screen and (max-width: 390px) {
   .contact-us {
-    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallWhiteBackground.png');
+    background: url('https://kad-website-ui-images.s3.amazonaws.com/smallWhiteBackground.png');
   }
 }
