--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -5,7 +5,7 @@
   height: 990px;
   align-items: center;
 
-  background: url('https://kad-website.s3.us-west-1.amazonaws.com/NewHeader.png');
+  background: url('https://kad-website-ui-images.s3.amazonaws.com/NewHeader.png');
   background-attachment: inherit;
   background-position: center center;
   background-repeat: no-repeat;
