--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -1,5 +1,5 @@
 .our-process {
-  background: url('https://kad-website.s3.us-west-1.amazonaws.com/whiteBackground.png');
+  background: url('https://kad-website-ui-images.s3.amazonaws.com/whiteBackground.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -219,7 +219,7 @@
 
 @media screen and (max-width: 390px) {
   .our-process {
-    background: url('https://kad-website.s3.us-west-1.amazonaws.com/smallWhiteBackground.png');
+    background: url('https://kad-website-ui-images.s3.amazonaws.com/smallWhiteBackground.png');
 
     &__content-item-process-text-wrapper > span {
       font-size: 20px;
