Fix mobile responsiveness across all components
- Add 480px breakpoint for Hero, OurBusiness, OurStory, ToolsOfTheTrade
- Fix hardcoded background-size in Hero to use cover on mobile
- Stack contact form fields vertically on mobile
- Add max-width constraints to buttons and form text
- Reduce modal padding on small screens
- Stack founder images vertically on small screens
- Improve image icon grid wrapping in OurBusiness
- Stack ToolsOfTheTrade image/text sections on small screens
- Reduce MobileNav hamburger size and link margins on small screens
- Add responsive font sizes for OurProcess text

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -72,6 +72,7 @@
 
   &__large {
     width: 260px;
+    max-width: 100%;
   }
 
   // &:after {
@@ -79,4 +80,17 @@
   //   background-size: 100%;
   //   transition: background 0s;
   // }
+}
+
+@media screen and (max-width: 480px) {
+  .button {
+    &__small {
+      width: 120px;
+    }
+
+    &__large {
+      width: 100%;
+      max-width: 260px;
+    }
+  }
 }
