--- a/src/components/OurBusiness/OurBusiness.scss
+++ b/src/components/OurBusiness/OurBusiness.scss
@@ -126,15 +126,34 @@
 
     &__all-image-icon-wrapper {
       flex-wrap: wrap;
-      justify-content: space-between;
-      width: 80%;
+      justify-content: center;
+      gap: 16px;
+      width: 90%;
       padding: 0;
-      padding-top: 50px;
+      padding-top: 30px;
     }
 
     &__image-icon-wrapper {
-      width: 114px;
+      width: 100px;
       font-size: 14px;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .our-business {
+    &__all-image-icon-wrapper {
+      width: 100%;
+      gap: 12px;
+    }
+
+    &__image-icon-wrapper {
+      width: 80px;
+      font-size: 12px;
+    }
+
+    &__info-text-wrapper {
+      width: 90%;
     }
   }
 }
