--- a/src/components/OurProcess/OurProcess.scss
+++ b/src/components/OurProcess/OurProcess.scss
@@ -137,6 +137,7 @@
 
       > p {
         width: 100%;
+        font-size: 14px;
       }
     }
 
@@ -162,14 +163,17 @@
     &__process-text-right {
       margin-left: 0px;
       margin-right: 0%;
+      width: 50%;
+      font-size: 14px;
     }
 
     &__process-text-left {
       margin-right: 0px;
+      width: 50%;
+      font-size: 14px;
     }
 
     &__content-item-process-circle {
-      // width: 70%;
       z-index: 0;
     }
 
