--- a/src/components/OurStory/OurStory.scss
+++ b/src/components/OurStory/OurStory.scss
@@ -42,12 +42,44 @@
     &__wrapper {
       width: 100%;
 
+      h1 {
+        font-size: 28px;
+      }
+
       h2 {
         font-size: 23px;
       }
 
+      p {
+        font-size: 15px;
+      }
+
       > p {
         width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .our-story {
+    &__wrapper {
+      h1 {
+        font-size: 24px;
+      }
+
+      p {
+        font-size: 14px;
+      }
+    }
+
+    &__our-founders-image-wrapper {
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+
+      img {
+        width: 80%;
       }
     }
   }
