--- a/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
+++ b/src/components/ToolsOfTheTrade/ToolsOfTheTrade.scss
@@ -178,6 +178,46 @@
   }
 }
 
+@media screen and (max-width: 480px) {
+  .tools-of-the-trade {
+    &__text-image-wrapper {
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+    }
+
+    &__text-image {
+      width: 60%;
+    }
+
+    &__platforms-text-image {
+      width: 50%;
+    }
+
+    &__languages,
+    &__tools-frameworks,
+    &__platforms {
+      width: 100%;
+      text-align: center !important;
+
+      h3 {
+        font-size: 22px;
+      }
+
+      p {
+        text-align: center !important;
+        font-size: 14px;
+      }
+    }
+
+    &__wrapper {
+      p {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 390px) {
   .tools-of-the-trade {
     background: url('https://kad-website-ui-images.s3.amazonaws.com/smallBlueBackground.png');
